// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root renders Home and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="header"
    >
      <div
        class="balance"
      >
        <div
          class="title"
        >
          Current Balance
        </div>
        <div
          class="value"
        >
          <div
            class="primary"
          >
            $0
          </div>
          <div
            class="secondary"
          >
            (0 sats)
          </div>
        </div>
      </div>
      <a
        href="/login"
      >
        Login
      </a>
    </div>
  </div>
  <div
    class="footer"
  >
    <div
      class="powered-by"
    >
      Powerd By 
      <a
        href="https://galoy.io/"
        rel="noreferrer"
        target="_blank"
      >
        Galoy
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Root renders Login and matches snapshot 1`] = `
<DocumentFragment>
  <form>
    <input
      type="tel"
    />
  </form>
  <div
    class="footer"
  >
    <div
      class="powered-by"
    >
      Powerd By 
      <a
        href="https://galoy.io/"
        rel="noreferrer"
        target="_blank"
      >
        Galoy
      </a>
    </div>
  </div>
</DocumentFragment>
`;
